tests/dataset/tpc-h/compiler/cpp/q18.error
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:367:27: error: no match for ‘operator==’ (operand types are ‘Result’ and ‘Result’)
  367 |               if (__g.key == __key) {
      |                   ~~~~~~~ ^~ ~~~~~
      |                       |      |
      |                       Result Result
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:26: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                        ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:56: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:56: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:26: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                        ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:56: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:56: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:70: error: template argument 1 is invalid
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                                      ^
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:398:70: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:401:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  401 |                    __items.push_back(
      |                            ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:402:51: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  402 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                 ~ ^ ~~~~~~~~~~~~~~
      |                                                 |       |
      |                                                 int     std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:402:57: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  402 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                         ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:402:57: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  402 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                         ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:394:80:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:394:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  394 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:394:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  394 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                               ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:32: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                              ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:62: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:62: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:32: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                              ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:62: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:62: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:76: error: template argument 1 is invalid
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                                                                            ^
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:411:76: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:414:34: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  414 |                          __items.push_back(
      |                                  ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:415:57: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  415 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                       ~ ^ ~~~~~~~~~~~~~~
      |                                                       |       |
      |                                                       int     std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:415:63: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  415 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                               ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:415:63: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  415 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                                                               ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:3)> [with auto:3 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:408:24:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:407:49: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  407 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:407:60: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  407 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                          ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:393:24: error: no matching function for call to ‘std::vector<std::pair<double, __struct8> >::push_back(<brace-enclosed initializer list>)’
  393 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  394 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  395 |                ([&]() {
      |                ~~~~~~~~ 
  396 |                  std::vector<decltype((
      |                  ~~~~~~~~~~~~~~~~~~~~~~
  397 |                      std::declval<__struct6>().l.l_extendedprice *
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  399 |                      __items;
      |                      ~~~~~~~~
  400 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  401 |                    __items.push_back(
      |                    ~~~~~~~~~~~~~~~~~~
  402 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  403 |                  }
      |                  ~      
  404 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  405 |                })())),
      |                ~~~~~~~  
  406 |            __struct8{g.key.c_name, g.key.c_custkey, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  407 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  408 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  409 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  410 |                            std::declval<__struct6>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  412 |                            __items;
      |                            ~~~~~~~~
  413 |                        for (auto x : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  414 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  415 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  416 |                        }
      |                        ~
  417 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  418 |                      })()),
      |                      ~~~~~~
  419 |                      g.key.c_acctbal, g.key.n_name, g.key.c_address,
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  420 |                      g.key.c_phone, g.key.c_comment}});
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:10:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<double, __struct8>; _Alloc = std::allocator<std::pair<double, __struct8> >; value_type = std::pair<double, __struct8>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<double, __struct8> >::value_type&’ {aka ‘const std::pair<double, __struct8>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<double, __struct8>; _Alloc = std::allocator<std::pair<double, __struct8> >; value_type = std::pair<double, __struct8>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<double, __struct8> >::value_type&&’ {aka ‘std::pair<double, __struct8>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq183762696459/001/prog.cpp:428:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<__struct6>’ requested
  350 |   std::vector<__struct6> result = ([&]() {
      |                                   ~~~~~~~~
  351 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  352 |     for (auto c : customer) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  353 |       for (auto o : orders) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~
  354 |         if (!((o.o_custkey == c.c_custkey)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  355 |           continue;
      |           ~~~~~~~~~
  356 |         for (auto l : lineitem) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
  357 |           if (!((l.l_orderkey == o.o_orderkey)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  358 |             continue;
      |             ~~~~~~~~~
  359 |           for (auto n : nation) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  360 |             if (!((n.n_nationkey == c.c_nationkey)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |               continue;
      |               ~~~~~~~~~
  362 |             auto __key =
      |             ~~~~~~~~~~~~
  363 |                 Result{c.c_name,  c.c_custkey, c.c_acctbal, c.c_address,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  364 |                        c.c_phone, c.c_comment, n.n_name};
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  365 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  366 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  367 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  368 |                 __g.items.push_back(__struct6{c, o, l, n});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  369 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  370 |                 break;
      |                 ~~~~~~
  371 |               }
      |               ~
  372 |             }
      |             ~
  373 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  374 |               __groups.push_back(__struct7{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  375 |                   __key, std::vector<__struct6>{__struct6{c, o, l, n}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  376 |             }
      |             ~
  377 |           }
      |           ~
  378 |         }
      |         ~
  379 |       }
      |       ~
  380 |     }
      |     ~
  381 |     std::vector<std::pair<double, __struct8>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  382 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  383 |       if (!((([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  384 |                  ([&]() {
      |                  ~~~~~~~~
  385 |                    std::vector<decltype(std::declval<__struct6>().l.l_quantity)>
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  386 |                        __items;
      |                        ~~~~~~~~
  387 |                    for (auto x : g.items) {
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~
  388 |                      __items.push_back(x.l.l_quantity);
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  389 |                    }
      |                    ~
  390 |                    return __items;
      |                    ~~~~~~~~~~~~~~~
  391 |                  })()) > threshold)))
      |                  ~~~~~~~~~~~~~~~~~~~~
  392 |         continue;
      |         ~~~~~~~~~
  393 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  394 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  395 |                ([&]() {
      |                ~~~~~~~~
  396 |                  std::vector<decltype((
      |                  ~~~~~~~~~~~~~~~~~~~~~~
  397 |                      std::declval<__struct6>().l.l_extendedprice *
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  398 |                      ((1 - std::declval<__struct6>().l.l_discount))))>
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  399 |                      __items;
      |                      ~~~~~~~~
  400 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  401 |                    __items.push_back(
      |                    ~~~~~~~~~~~~~~~~~~
  402 |                        (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  403 |                  }
      |                  ~
  404 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  405 |                })())),
      |                ~~~~~~~
  406 |            __struct8{g.key.c_name, g.key.c_custkey, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  407 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  408 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  409 |                        std::vector<decltype((
      |                        ~~~~~~~~~~~~~~~~~~~~~~
  410 |                            std::declval<__struct6>().l.l_extendedprice *
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  411 |                            ((1 - std::declval<__struct6>().l.l_discount))))>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  412 |                            __items;
      |                            ~~~~~~~~
  413 |                        for (auto x : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  414 |                          __items.push_back(
      |                          ~~~~~~~~~~~~~~~~~~
  415 |                              (x.l.l_extendedprice * ((1 - x.l.l_discount))));
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  416 |                        }
      |                        ~
  417 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  418 |                      })()),
      |                      ~~~~~~
  419 |                      g.key.c_acctbal, g.key.n_name, g.key.c_address,
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  420 |                      g.key.c_phone, g.key.c_comment}});
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  421 |     }
      |     ~
  422 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  423 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  424 |     std::vector<__struct8> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  425 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  426 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  427 |     return __res;
      |     ~~~~~~~~~~~~~
  428 |   })();
      |   ~~^~
